--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -5,7 +5,7 @@ erlang_version=17.2
 elixir_version=1.0.1
 
 # Always rebuild from scratch on every deploy?
-always_rebuild=true
+always_rebuild=false
 
 # Export heroku config vars
 # config_vars_to_export=(DATABASE_URL)
